# llm_zoomcamp_project

./: .gitignore  Makefile  README.md  pyproject.toml
.virtual_documents/notebooks/: 0.01-pkn-data-source-1.ipynb
data/: make_dataset.py
data/raw/: Rough exploration - actual_data.csv  Rough exploration.ods  documents.json
notebooks/: 0.01-pkn-data-source-1.ipynb  documents.json
